Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22160

Wrongly autodetect of MinGW 32/64 bit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.10.0-beta1
    • Qt Creator 4.8.2
    • None
    • * Windows 10
      * MinGW 7.3.0 for both 32 and 64 bit (from Qt Maintenance Tool).
    • 9d5e38dbbbee94c829a85ea3803390fa6036bbe5, db4b02167a14a68c0817bac955f5aff502d10714

      When I have choosed the MinGW 7.3.0 for both 32/64 bit, then QtC wrongly autodetect a paths to this compilers.

      A real paths are:

      • c:\Qt-meta\Tools\mingw730_32\ - for 32 bit
      • c:\Qt-meta\Tools\mingw730_64\ - for 64 bit

      But from QtC->Tools->Options->Compilers I see that QtC take only the 'c:\Qt-meta\Tools\mingw730_64\' path and interpret it as a 32-bit compiler (please see screenshoots)!

      And then e.g. compilation of QBS's 'app-and-lib' example with using of an auto-detected Kit fails with following errors:

      ...
      
      C:/Qt-meta/Tools/mingw730_64/bin/../lib/gcc/x86_64-w64-mingw32/7.3.0/../../../../x86_64-w64-mingw32/bin/ld.exe: skipping incompatible C:/Qt-meta/Tools/mingw730_64/bin/../lib/gcc/x86_64-w64-mingw32/7.3.0/libstdc++.dll.a when searching for -lstdc++
      
      ...

        1. gdb-wrong-path.png
          gdb-wrong-path.png
          31 kB
        2. mingw-choose.png
          mingw-choose.png
          11 kB
        3. mingw-installed.png
          mingw-installed.png
          6 kB
        4. mingw-wrong-arch.png
          mingw-wrong-arch.png
          31 kB
        5. mingw-wrong-path.png
          mingw-wrong-path.png
          36 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            kuzulis Denis Shienkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes