ProjectExplorer: Do not set up a 64-bit mingw as a 32-bit toolchain

The mingw toolchain is typically shipped explicitly as a 32-bit or 64-
bit package, alongside matching libraries. Therefore, it makes little
sense to set up a 64-bit mingw compiler as a 32-bit toolchain, even
though it can create 32-bit objects.

Task-number: QTCREATORBUG-22160
Change-Id: I9437801741b146785fecb0c0dd4b1db21ef94918
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>